// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copied from chat basic: datetime format 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "（1",
      ],
      "player": Object {
        "name": "无情的围观熊",
        "title": "冒泡",
      },
      "time": "2/14/2020 9:16:13 PM",
    },
    Object {
      "content": Array [
        "2",
        "3",
      ],
      "player": Object {
        "name": "守善锤",
        "title": "骰子",
      },
      "time": "2/14/2020 9:16:17 PM",
    },
    Object {
      "content": Array [
        "3",
      ],
      "player": Object {
        "name": "克里斯托夫·韦恩",
        "title": "PL",
      },
      "time": "2/14/2020 9:17:10 PM",
    },
    Object {
      "content": Array [
        "5",
      ],
      "player": Object {
        "name": "菲比斯·墨菲斯托",
        "title": "PL",
      },
      "time": "2/14/2020 9:17:31 PM",
    },
  ],
}
`;

exports[`copied from chat basic: time format 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "丧 丧 熊",
        "title": "煤油",
      },
      "time": "9:59:54 PM",
    },
    Object {
      "content": Array [
        "2",
        "3",
      ],
      "player": Object {
        "name": "Paul~K（写不完了...）",
        "title": "八方体",
      },
      "time": "10:00:04 PM",
    },
  ],
}
`;

exports[`copied from chat date format without AM|PM 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "伤情",
      ],
      "player": Object {
        "name": "迈克尔 史密斯",
        "title": "酒店管理层",
      },
      "time": "2020/3/28 19:02:31",
    },
  ],
}
`;

exports[`copied from chat instant withdraw 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "丧 丧 熊",
        "title": undefined,
      },
      "time": "9:59:54 PM",
    },
    Object {
      "content": Array [
        "2",
        "3",
      ],
      "player": Object {
        "name": "Paul~K（写不完了...）",
        "title": undefined,
      },
      "time": "10:00:04 PM",
    },
  ],
}
`;

exports[`copied from chat mixed date-time format 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "爬行类化石",
        "title": undefined,
      },
      "time": "5/8/2020 11:59:47 PM",
    },
    Object {
      "content": Array [
        "2",
      ],
      "player": Object {
        "name": " Patrick",
        "title": undefined,
      },
      "time": "12:03:01 AM",
    },
    Object {
      "content": Array [
        "3",
      ],
      "player": Object {
        "name": "爬行类化石",
        "title": undefined,
      },
      "time": "12:07:49 AM",
    },
  ],
}
`;

exports[`copied from chat other system messages 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "守善锤",
        "title": "骰子",
      },
      "time": "3/4/2020 6:00:32 PM",
    },
    Object {
      "content": Array [
        "2",
      ],
      "player": Object {
        "name": "克里斯托夫·韦恩",
        "title": "嘟嘟男爵",
      },
      "time": "3/4/2020 6:00:37 PM",
    },
    Object {
      "content": Array [
        "3",
      ],
      "player": Object {
        "name": "薇薇安·汉密尔顿",
        "title": "PL",
      },
      "time": "3/4/2020 6:01:02 PM",
    },
  ],
}
`;

exports[`copied from chat single date 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "守善锤",
        "title": "骰子",
      },
      "time": "3/4/2020 6:00:32 PM",
    },
    Object {
      "content": Array [
        "2",
      ],
      "player": Object {
        "name": "克里斯托夫·韦恩",
        "title": "嘟嘟男爵",
      },
      "time": "3/4/2020 6:00:37 PM",
    },
    Object {
      "content": Array [
        "3",
      ],
      "player": Object {
        "name": "薇薇安·汉密尔顿",
        "title": "PL",
      },
      "time": "3/4/2020 6:01:02 PM",
    },
  ],
}
`;

exports[`copied from chat without title 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "丧 丧 熊",
        "title": undefined,
      },
      "time": "9:59:54 PM",
    },
    Object {
      "content": Array [
        "2",
        "3",
      ],
      "player": Object {
        "name": "Paul~K（写不完了...）",
        "title": undefined,
      },
      "time": "10:00:04 PM",
    },
  ],
}
`;

exports[`copied from message manager Chinese time 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "“——1。",
      ],
      "player": Object {
        "name": "织练取",
        "number": "958884",
        "title": undefined,
      },
      "time": "上午 3:13:28",
    },
    Object {
      "content": Array [
        "“我2”",
        "\\"门3\\"",
      ],
      "player": Object {
        "name": "白菜",
        "number": "indo@qq.com",
        "title": undefined,
      },
      "time": "上午 3:14:30",
    },
    Object {
      "content": Array [
        "嫌疑",
        "是出",
      ],
      "player": Object {
        "name": "白菜",
        "number": "indo@qq.com",
        "title": undefined,
      },
      "time": "下午 3:16:49",
    },
  ],
}
`;

exports[`copied from message manager basic 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "“——1。",
      ],
      "player": Object {
        "name": "织练取",
        "number": "958884",
        "title": "1",
      },
      "time": "3:13:28 AM",
    },
    Object {
      "content": Array [
        "“我2”",
        "\\"门3\\"",
      ],
      "player": Object {
        "name": "白菜",
        "number": "indo@qq.com",
        "title": "2",
      },
      "time": "3:14:30 AM",
    },
    Object {
      "content": Array [
        "嫌疑",
        "是出",
      ],
      "player": Object {
        "name": "白菜",
        "number": "indo@qq.com",
        "title": "2",
      },
      "time": "3:16:49 AM",
    },
  ],
}
`;

exports[`copied from message manager system messages 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "暗夜桑的h检定，那么结果是:D100=13/25 成功",
      ],
      "player": Object {
        "name": "骰娘",
        "number": "87200",
        "title": undefined,
      },
      "time": "4:11:31 PM",
    },
    Object {
      "content": Array [
        ".r4h",
      ],
      "player": Object {
        "name": "DK",
        "number": "2808",
        "title": undefined,
      },
      "time": "12:11:41 AM",
    },
  ],
}
`;

exports[`copied from message manager without title 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "“——1。",
      ],
      "player": Object {
        "name": "织练取",
        "number": "958884",
        "title": undefined,
      },
      "time": "3:13:28 AM",
    },
    Object {
      "content": Array [
        "“我2”",
        "\\"门3\\"",
      ],
      "player": Object {
        "name": "白菜",
        "number": "indo@qq.com",
        "title": undefined,
      },
      "time": "3:14:30 AM",
    },
    Object {
      "content": Array [
        "嫌疑",
        "是出",
      ],
      "player": Object {
        "name": "白菜",
        "number": "indo@qq.com",
        "title": undefined,
      },
      "time": "3:16:49 AM",
    },
  ],
}
`;

exports[`copied from mobile basic 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "德里奇化石",
      },
      "time": "23:50:12",
    },
    Object {
      "content": Array [
        "2",
      ],
      "player": Object {
        "name": "a dark ideation",
      },
      "time": "23:50:40",
    },
    Object {
      "content": Array [
        "诶？",
      ],
      "player": Object {
        "name": "一零绵羊咩咩咩",
      },
      "time": "23:50:48",
    },
  ],
}
`;

exports[`copied from mobile filter dates 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "德里奇化石",
      },
      "time": "23:50:12",
    },
    Object {
      "content": Array [
        "2",
      ],
      "player": Object {
        "name": "a dark ideation",
      },
      "time": "23:50:40",
    },
  ],
}
`;

exports[`exported from log basic 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "骰娘-Roll100",
        "number": "87200175",
      },
      "time": "2019-09-23 8:43:38 PM",
    },
    Object {
      "content": Array [
        ".r test",
      ],
      "player": Object {
        "name": "暗夜",
        "number": "28084825",
      },
      "time": "2019-09-23 9:02:42 PM",
    },
    Object {
      "content": Array [
        "4",
      ],
      "player": Object {
        "name": "岁寒",
        "number": "36226407",
      },
      "time": "2019-09-23 11:26:00 PM",
    },
    Object {
      "content": Array [
        "5",
      ],
      "player": Object {
        "name": "黄山真君",
        "number": "106505723",
      },
      "time": "2019-09-24 7:54:29 AM",
    },
    Object {
      "content": Array [
        "6",
      ],
      "player": Object {
        "name": "黄山真君",
        "number": "106505723",
      },
      "time": "2019-09-24 9:16:35 AM",
    },
  ],
}
`;

exports[`exported from log email 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "礼",
        "number": "852649",
      },
      "time": "2020-03-04 12:12:29 AM",
    },
    Object {
      "content": Array [
        "2",
      ],
      "player": Object {
        "name": "kp",
        "number": "100550",
      },
      "time": "2020-03-04 12:12:39 AM",
    },
    Object {
      "content": Array [
        "3",
      ],
      "player": Object {
        "name": "围观",
        "number": "indo@qq.com",
      },
      "time": "2020-03-04 12:13:41 AM",
    },
  ],
}
`;
